@@ -49,8 +49,13 @@ public class Tuple implements Cloneable, MapWriter {
    */
   public boolean EXCEPTION;
 
+  /** Tuple fields. */
   private final Map<String, Object> fields = CollectionUtil.newHashMap(2);
+
+  /** External serializable field names. */
   private List<String> fieldNames;
+
+  /** Mapping of external field names to internal tuple field names. */
   private Map<String, String> fieldLabels;
 
   public Tuple() {
@@ -242,7 +247,7 @@ public class Tuple implements Cloneable, MapWriter {
 
   /**
    * A list of field names to serialize. This list (together with the mapping in {@link
-   * #getFieldLabels()} determines what tuple values are serialized and their external (serialized)
+   * #getFieldLabels()}) determines what tuple values are serialized and their external (serialized)
    * names.
    *
    * @return list of external field names or null
@@ -279,8 +284,9 @@ public class Tuple implements Cloneable, MapWriter {
   }
 
   /**
-   * The other tuples fields and fieldLabels will be putAll'd directly to this's fields and
-   * fieldLabels while other's fieldNames will be added such that duplicates aren't present.
+   * The other tuples fields and fieldLabels will be merged via putAll directly into this Tuple's
+   * fields and fieldLabels while other's fieldNames will be added such that duplicates aren't
+   * present.
    *
    * @param other Tuple to be merged into this.
    */
